KBV-347: addressed PR comments